--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="app" ng-csp>
 <head>
     <meta charset="utf-8">
-    <title>Spiff FE v0.3.2</title>
+    <title>Spiff FE v0.5.0</title>
 
     <link rel="stylesheet" media="all" href="../vendor/css/bootstrap.min.css">
     <link rel="stylesheet" media="all" href="../vendor/css/bootstrap-theme.min.css">
@@ -32,6 +32,7 @@
 <script src="counter/counter.js"></script>
 <script src="game/game.js"></script>
 <script src="index/index.js"></script>
+<script src="indicator/indicator.js"></script>
 <script src="settings/settings.js"></script>
 <script src="status/status.js"></script>
 
