--- a/app/game/game.html
+++ b/app/game/game.html
@@ -1,21 +1,20 @@
 <div id="main-window" class="flex-column">
     <div id="top-window" class="flex">
-        <div id="thoughts" fe-auto-scroll class="buffer bordered">
-            <div class="game-content" ng-repeat="line in thoughts track by $index" ng-bind-html="line"></div>
-        </div>
+        <div id="thoughts" class="buffer bordered" fe-auto-scroll ng-model="thoughts"></div>
         <div id="room_objs" class="buffer bordered" ng-bind-html="room_objs"></div>
     </div>
     <div id="game-window" class="flex">
         <div id="left" class="flex-column col-md-2 col-sm-3 col-xs-3">
-            <div id="logons" fe-auto-scroll class="buffer bordered">
-                <div class="game-content" ng-repeat="line in logons track by $index" ng-bind-html="line"></div>
-            </div>
+            <div id="logons" class="buffer bordered" fe-auto-scroll ng-model="logons"></div>
         </div>
         <div id="middle" class="flex-column">
-            <div id="game" fe-auto-scroll class="buffer bordered"></div>
-            <div ng-include="'status/status.html'"></div>
-            <div id="command" ng-include="'command/command.html'"></div>
-            <div ng-include="'game/hands.html'"></div>
+            <div id="game" fe-auto-scroll class="buffer bordered" ng-model="game"></div>
+            <div ng-controller="StatusCtrl" ng-include="'status/status.html'"></div>
+            <div class="flex">
+                <div id="command" ng-include="'command/command.html'"></div>
+                <div id="indicators" class="col-xs-3" ng-controller="IndicatorCtrl" ng-include="'indicator/index.html'"></div>
+            </div>
+            <div id="hands" class="flex" ng-include="'game/hands.html'"></div>
         </div>
         <!-- <div id="right" class="hidden-sm hidden-xs col-md-2 col-sm-2 col-xs-3"></div> -->
     </div>
