--- a/app/app.html
+++ b/app/app.html
@@ -2,10 +2,8 @@
 <html lang="en" ng-app="app" ng-csp>
 <head>
     <meta charset="utf-8">
-    <title>Spiff FE v0.5.0</title>
 
     <link rel="stylesheet" media="all" href="../vendor/css/bootstrap.min.css">
-    <link rel="stylesheet" media="all" href="../vendor/css/bootstrap-theme.min.css">
     <link rel="stylesheet" media="all" href="../vendor/css/font-awesome.min.css">
     <link rel="stylesheet" media="all" href="../asset/css/main.css">
     <link rel="stylesheet" media="all" href="../asset/css/theme.css">
@@ -31,6 +29,7 @@
 <script src="command/command.js"></script>
 <script src="counter/counter.js"></script>
 <script src="game/game.js"></script>
+<script src="header/header.js"></script>
 <script src="index/index.js"></script>
 <script src="indicator/indicator.js"></script>
 <script src="settings/settings.js"></script>
