--- a/app/counter/counter.html
+++ b/app/counter/counter.html
@@ -1,3 +1,1 @@
-<span ng-controller="CounterCtrl">
-    <progress  value="0" max="{{ max }}" fe-progress="roundtime" fe-progress-type="type"></progress>
-</span>
+<progress ng-controller="CounterCtrl" value="0" max="{{ max }}" fe-progress="roundtime" fe-progress-type="type"></progress>
