--- a/app/settings/settings.html
+++ b/app/settings/settings.html
@@ -1,3 +1,4 @@
+<div ng-include="'header/header.html'"></div>
 <div class="page-header">
     <h1>Settings</h1>
 </div>
@@ -13,7 +14,7 @@
 </p>
 <form role="form">
     <div class="form-group">
-        <textarea class="form-control" rows="8" ng-model="settings"></textarea>
+        <textarea class="form-control" style="height: 100%;" ng-model="settings"></textarea>
     </div>
     <div class="btn-group">
         <button type="button" class="btn btn-primary" ng-click="save()">Save</button>
