--- a/app/status/status.html
+++ b/app/status/status.html
@@ -1,30 +1,38 @@
-<div class="status flex">
+<div id="status" class="flex" ng-controller="StatusCtrl">
     <div class="health col-xs-2">
-        <progress value="{{ status.health.current }}" max="{{ status.health.max }}"></progress>
-        <i class="fa fa-heart"> {{ status.health.current }}</i>
+        <span>
+            <progress value="{{ status.health.current }}" max="{{ status.health.max }}"></progress>
+            <i class="fa fa-heart"> {{ status.health.current }}</i>
+        </span>
     </div>
     <div class="mana col-xs-2">
-        <progress value="{{ status.mana.current }}" max="{{ status.mana.max }}"></progress>
-        <i class="fa fa-bolt"> {{ status.mana.current }}</i>
+        <span>
+            <progress value="{{ status.mana.current }}" max="{{ status.mana.max }}"></progress>
+            <i class="fa fa-bolt"> {{ status.mana.current }}</i>
+        </span>
     </div>
     <div class="stamina col-xs-2">
-        <progress value="{{ status.stamina.current }}" max="{{ status.stamina.max }}"></progress>
-        <i class="fa fa-beer"> {{ status.stamina.current }}</i>
-    </div>
-    <div class="spirit col-xs-2">
-        <progress value="{{ status.spirit.current }}" max="{{ status.spirit.max }}"></progress>
-        <i class="fa fa-bullhorn"> {{ status.spirit.current }}</i>
+        <span>
+            <progress value="{{ status.stamina.current }}" max="{{ status.stamina.max }}"></progress>
+            <i class="fa fa-beer"> {{ status.stamina.current }}</i>
+        </span>
     </div>
     <div class="pbarStance col-xs-2">
-        <progress value="{{ status.pbarStance.current }}" max="{{ status.pbarStance.max }}"></progress>
-        <i class="fa fa-shield"> {{ status.pbarStance.current }}%</i>
-    </div>
-    <div class="encumlevel col-xs-2">
-        <progress value="{{ status.encumlevel.current }}" max="{{ status.encumlevel.max }}"></progress>
-        <i class="fa fa-anchor"> {{ status.encumlevel.current }}%</i>
+        <span>
+            <progress value="{{ status.pbarStance.current }}" max="{{ status.pbarStance.max }}"></progress>
+            <i class="fa fa-shield"> {{ status.pbarStance.current }}%</i>
+        </span>
     </div>
     <div class="mindState col-xs-2">
-        <progress value="{{ status.mindState.current }}" max="{{ status.mindState.max }}"></progress>
-        <i class="fa fa-lightbulb-o"> {{ status.mindState.current }}%</i>
+        <span>
+            <progress value="{{ status.mindState.current }}" max="{{ status.mindState.max }}"></progress>
+            <i class="fa fa-lightbulb-o"> {{ status.mindState.current }}%</i>
+        <span>
+    </div>
+    <div class="encumlevel hidden-xs col-xs-1">
+        <i class="fa fa-anchor"> {{ status.encumlevel.current }}%</i>
+    </div>
+    <div class="spirit hidden-xs col-xs-1">
+        <i class="fa fa-bullhorn"> {{ status.spirit.current }}</i>
     </div>
 </div>
