--- a/app/game/game.html
+++ b/app/game/game.html
@@ -7,7 +7,7 @@
         </div>
         <div id="game-bottom" class="flex">
             <div id="game-left" class="flex-column">
-                <div id="game-logons" class="hidden-xs hidden-sm" fe-auto-scroll ng-model="logons"></div>
+                <div id="game-logons" class="hidden-xs hidden-sm" ng-model="logons"></div>
             </div>
 
             <div id="game-main" class="flex-column">
