--- a/app/index/modal-connect-failed.html
+++ b/app/index/modal-connect-failed.html
@@ -2,7 +2,7 @@
     <h3>Connection Failed</h3>
 </div>
 <div class="modal-body">
-    Failed to connect to <strong>{{ hostname }}:{{ port }}</strong>. Please try again.
+    Failed to connect to <strong>{{ hostname }}:{{ port }}</strong>. Verify your IP settings and port and try again.
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok()">OK</button>
