--- a/app/game/game.html
+++ b/app/game/game.html
@@ -2,8 +2,8 @@
     <div ng-include="'header/header.html'"></div>
     <div id="game" class="flex-column">
         <div id="game-top">
-            <div id="game-top-thoughts" class="col-xs-12 col-sm-9 overflow" fe-auto-scroll ng-model="thoughts"></div>
-            <div id="game-top-roomobjs" class="overflow col-xs-3 hidden-xs" ng-bind-html="roomobjs"></div>
+            <div id="game-top-thoughts" class="col-xs-12 col-sm-8 overflow" fe-auto-scroll ng-model="thoughts"></div>
+            <div id="game-top-roomobjs" class="overflow col-xs-4 hidden-xs" ng-bind-html="room"></div>
         </div>
         <div id="game-bottom" class="flex">
             <div id="game-left" class="flex-column">
