--- a/app/game/hands.html
+++ b/app/game/hands.html
@@ -1,3 +1,3 @@
-<div id="game-hands-right" class="col-xs-4 bordered">{{ hands.right }}</div>
-<div id="game-hands-left" class="col-xs-4 bordered">{{ hands.left }}</div>
-<div id="game-hands-spell" class="col-xs-4 bordered">{{ hands.casting }}</div>
+<div id="game-hands-right" class="col-xs-4 rounded">{{ hands.right }}</div>
+<div id="game-hands-left" class="col-xs-4 rounded">{{ hands.left }}</div>
+<div id="game-hands-spell" class="col-xs-4 rounded">{{ hands.casting }}</div>
