--- a/app/indicator/indicator.html
+++ b/app/indicator/indicator.html
@@ -1,4 +1,4 @@
-<div ng-controller="IndicatorCtrl" id="indicators" class="bordered">
+<div ng-controller="IndicatorCtrl" id="indicators" class="rounded">
     <i ng-class="{ standing: standing, kneeling: kneeling, sitting: sitting, prone: prone }" class="fa fa-lg">
         <img id="position-img" src="/asset/img/1x1-pixel.png">
     </i>
