--- a/app/app.html
+++ b/app/app.html
@@ -30,7 +30,7 @@
             </md-button>
         </div>
     </md-toolbar>
-    <div id="main-container" layout="row" flex style="height: 100%;">
+    <div id="main-container" layout="row" flex fe-resize ng-style="resizeWithOffset(64)">
         <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
 
         </md-sidenav>
@@ -52,6 +52,7 @@
 <script src="/build/js/app.js/app.js"></script>
 <script src="/build/js/app.js/auto-scroll.js"></script>
 <script src="/build/js/app.js/progress.js"></script>
+<script src="/build/js/app.js/resize.js"></script>
 <script src="/build/js/app.js/socket.js"></script>
 <script src="/build/js/app.js/client.js"></script>
 <script src="/build/js/app.js/parser.js"></script>
